--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,15 +67,19 @@ jobs:
       #   uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       #   with:
       #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      - name: downcase REPO
-        id: downcase
-        run: |
-          echo "user=${github.repository_owner,,}" >> $GITHUB_OUTPUT
-          echo "name=${github.event.repository.name,,}" >> $GITHUB_OUTPUT
+      # - name: downcase REPO
+      #   id: downcase
+      #   run: |
+      #     echo "user=${github.repository_owner,,}" >> $GITHUB_OUTPUT
+      #     echo "name=${github.event.repository.name,,}" >> $GITHUB_OUTPUT
+      - id: string
+        uses: ASzc/change-string-case-action@v5
+        with:
+          string: ${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ${{ steps.downcase.outputs.user }}/${{ steps.downcase.outputs.name }}:latest
+          tags: ${{ steps.string.outputs.lowercase }}
 # i would also like to do pages, but idk where to even start with that
