--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,22 +60,12 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Extract metadata (tags, labels) for Docker
-      #   id: meta
-      #   uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-      #   with:
-      #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      # - name: downcase REPO
-      #   id: downcase
-      #   run: |
-      #     echo "user=${github.repository_owner,,}" >> $GITHUB_OUTPUT
-      #     echo "name=${github.event.repository.name,,}" >> $GITHUB_OUTPUT
       - id: string
         uses: ASzc/change-string-case-action@v5
         with:
-          string: ${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+          string: ghcr.io/${{ github.actor }}/${{ github.event.repository.name }}:latest
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
